plugins {
    id "java-library"
    id "io.spring.dependency-management" version "1.1.7"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.1"
        mavenBom "io.micrometer:micrometer-bom:1.14.3"
    }
    dependencies {
        dependency "org.apache.commons:commons-collections4:4.4"
        dependency "org.graalvm.js:js:24.1.1"
        dependency "org.graalvm.js:js-scriptengine:24.1.1"
    }
}

dependencies {

    implementation "org.apache.commons:commons-lang3"
    implementation "org.apache.commons:commons-collections4"
    implementation "org.springframework.boot:spring-boot-starter"
    implementation "org.springframework.boot:spring-boot-starter-json"
    implementation "org.springframework.boot:spring-boot-starter-aop"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml"
    runtimeOnly "org.graalvm.js:js"
    runtimeOnly "org.graalvm.js:js-scriptengine"

    // テストライブラリ。
    testImplementation "org.junit.jupiter:junit-jupiter"
    testImplementation "org.hamcrest:hamcrest"
    testImplementation "org.mockito:mockito-core"
    testImplementation "org.mockito:mockito-junit-jupiter"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.springframework.boot:spring-boot-starter-json"
    testRuntimeOnly "org.springframework.boot:spring-boot-starter-aop"
    testRuntimeOnly "org.springframework.boot:spring-boot-starter-web"
    testRuntimeOnly "org.springframework.boot:spring-boot-starter-actuator"
    testRuntimeOnly "io.micrometer:micrometer-tracing-bridge-brave"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}
